<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    android:paddingVertical="50dp"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/colosseum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/imagine1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/silver"
        android:padding="34dp"
        android:src="@drawable/account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colosseum"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:background="@drawable/silver"
        android:padding="34dp"
        android:src="@drawable/camera"
        app:layout_constraintEnd_toStartOf="@id/account"
        app:layout_constraintTop_toBottomOf="@+id/colosseum"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:background="@drawable/silver"
        android:padding="34dp"
        android:src="@drawable/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colosseum"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/_312"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />
   <Button
       android:layout_width="194dp"
       android:layout_height="44dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:background="@color/red"
       android:text="@string/ect"
       android:layout_marginTop="25dp"
       android:textAllCaps="false"
       android:textColor="@color/white"
       app:layout_constraintTop_toBottomOf="@+id/number"/>



</androidx.constraintlayout.widget.ConstraintLayout>